--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-hide-show-password-input": "^1.1.0",
+    "react-native-image-slider": "^2.0.3",
     "react-native-imagepicker": "^2.0.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-picker-select": "^6.5.0",
+    "react-native-screens": "^2.0.0-beta.4",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-simple-toast": "^1.0.0",
     "react-native-ui-xg": "0.0.6",
