--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-gesture-handler": "^1.5.2",
     "react-native-hide-show-password-input": "^1.1.0",
     "react-native-image-slider": "^2.0.3",
+    "react-native-image-slider-box": "^1.0.12",
     "react-native-imagepicker": "^2.0.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-material-textfield": "^0.16.1",
